lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:20: error: Double does not take parameters
			pos = (sol(i).y())
                                       ^